--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pijs",
-  "version": "0.6.7",
-  "description": "PiJS is an Open Source React PWA with Secure SSL Node/Express server running on a Raspberry Pi 4",
+  "name": "pijs-app",
+  "version": "0.6.8",
+  "description": "PiJS.app is an Open Source React PWA",
   "repository": {
     "type": "git",
-    "url": "https://github.com/listingslab-hardware/pijs.git"
+    "url": "https://github.com/listingslab-hardware/pijs-app.git"
   },
   "author": {
     "name": "listingslab",
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "clear && react-scripts build && firebase deploy"
   },
   "dependencies": {
     "@manaflair/redux-batch": "^1.0.0",
