--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "version": "0.0.2",
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
@@ -13,8 +14,9 @@
     "node": "8"
   },
   "dependencies": {
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.3.0"
+    "firebase-admin": "^8.6.0",
+    "firebase-functions": "^3.3.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
