--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pijs-app",
-  "version": "0.7.2",
+  "version": "0.7.3",
   "description": "PiJS.app is an Open Source React PWA",
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "react-redux-firebase": "^3.0.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-zoom-pan-pinch": "^1.5.5",
     "redux": "^4.0.4",
     "redux-firestore": "^0.11.0",
     "redux-logger": "^3.0.6",
