Get data with Cloud Firestore

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redux": "^4.0.4",
     "redux-firestore": "^0.11.0",
     "redux-logger": "^3.0.6",
-    "ua-parser-js": "^0.7.21"
+    "ua-parser-js": "^0.7.21",
+    "uuid": "^3.4.0"
   },
   "license": "MIT",
   "eslintConfig": {
