--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# dev
+_dev
+
 # env
 .env.development
 .env.production
@@ -29,5 +32,3 @@ yarn-error.log*
 .firebase/
 
 *.log
-
-_dev
