--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mapbox-gl": "^1.5.1",
     "moment": "^2.24.0",
     "react": "^16.11.0",
+    "react-countdown-circle-timer": "^1.0.6",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.6",
